--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
                     <button>get started</button>
                 </div>
             </div>
+            <h1>hello
+                
+            </h1>
 
 
-            <!-- <div id="t1-topleft">t1-topleft</div>
+            <div id="t1-topleft">t1-topleft</div>
             <div id="t1-section">t1-section</div>
             <div id="t1-main">t1-main</div>
             <div id="t1-foot1">t1-foot1</div>
             <div id="t1-foot2">t1-foot2</div>
             <div id="t1-foot3">t1-foot3</div>
-            <div id="t1-foot4">t1-foot4</div> -->
+            <div id="t1-foot4">t1-foot4</div>
         </div>  
     </div>
 </body>
