UPDATE the section

--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
                     <a href="#">more links</a>
                 </div>
                 <div class="t1-head-right">
-                    <button>sign up</button>
-                    <button>get started</button>
+                    <button class="btn1">sign up</button>
+                    <button class="btn2">get started</button>
                 </div>
             </div>
-            
-            <div id="t1-section">t1-section</div>
-            <div id="t1-main">t1-main</div>
-            <div id="t1-foot1">t1-foot1</div>
+            <div id="t1-section">
+                <div id="t1-leftinfo">
+                    <h2>About our firm</h2>
+                </div>
+                <div id="t1-rightinfo">
+                    <p>At our firm, we pride ourselves on delivering tailored solutions that empower businesses to thrive. With years of experience across various industries, our dedicated team is committed to driving growth and operational excellence.</p>
+                    
+                    <button class="btn1">sign up</button>
+                    <button class="btn2">get started</button>
+
+                </div>
+            </div>
+            <div id="t1-main">
+                <!-- <img src="/img/t1-hero.webp" alt="hero-img 1">     -->
+            </div>
+            <!-- <div id="t1-foot1">t1-foot1</div>
             <div id="t1-foot2">t1-foot2</div>
             <div id="t1-foot3">t1-foot3</div>
-            <div id="t1-foot4">t1-foot4</div>
+            <div id="t1-foot4">t1-foot4</div> -->
         </div>  
-    </div>
 </body>
 </html>
