--- a/index.html
+++ b/index.html
@@ -36,13 +36,27 @@
 
                 </div>
             </div>
-            <div id="t1-main">
-                <!-- <img src="/img/t1-hero.webp" alt="hero-img 1">     -->
+            <div id="t1-main"></div>
+            <div class="stat-container">
+                <div class="stat-box">
+                    <h2>95%</h2>
+                    <p>Complete Customer<br> Satisfaction</p>
+                </div>
+                <div class="stat-box">
+                    <h2>10+</h2>
+                    <p>Innovation and Valuable<br> Insight</p>
+                </div>
+                <div class="stat-box">
+                    <h2>$10m</h2>
+                    <p>Highly efficient financial<br> Strategies</p>
+                </div>
+                <div class="stat-box">
+                    <h2>50m</h2>
+                    <p>Users Worldwide, providing them with</p>
+                </div>
             </div>
-            <!-- <div id="t1-foot1">t1-foot1</div>
-            <div id="t1-foot2">t1-foot2</div>
-            <div id="t1-foot3">t1-foot3</div>
-            <div id="t1-foot4">t1-foot4</div> -->
         </div>  
+
+        <!-- expert section -->
 </body>
 </html>
