UPDATE expert section complted

--- a/index.html
+++ b/index.html
@@ -58,5 +58,24 @@
         </div>  
 
         <!-- expert section -->
+        <div id="expert-section">
+            <button >About us</button>
+            <div class="expert-container">
+                <div id="ex-container1">
+                    <div id="ex-co1">
+                        <h2>Unlock our expertise to drive<br>success across industries.</h2>
+                    </div>
+                    <div id="ex-co2">
+                        <p>With over 15 years of experience, we specialize in delivering tailored solutions that drive success across industries like finance, technology, and operations. Our dedicated team is focused on accelerating growth and helping your business thrive in an ever-changing market.</p>
+                    </div>
+                </div>
+                <div id="ex-container2">
+                    <img src="/img/expertise-img.png" alt="expertimg">
+                </div>
+            </div>
+        </div>
+
+        <!-- services section -->
+        
 </body>
 </html>
