--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single+Ink:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single+Ink:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
         <div id="t1">
@@ -76,6 +77,88 @@
         </div>
 
         <!-- services section -->
+        <div id="services">
+            <button>EXPERTISE</button>
+            
+            <div class="service-con">
+                <div id="ser-con-left">
+                    <h2>Explore our comprehensive service offerings</h2>
+                </div>
+                <div id="ser-con-right">
+                    <p>Focused on your unique needs, our team delivers solutions that blend deep industry knowledge and cutting-edge strategies to ensure lasting growth.</p>
+                </div>
+            </div>
+            <div class="service-cards">
+                <div class="team-card blue-card">
+                    <div class="blue-info">
+                        <h3>Alice Johnson</h3>
+                        <h3>CEO & Founder</h3>
+                    </div>
+                    <p>Alice has over of 15 years of experience in strategic leadership and business development</p>
+                    <div class="blue-socials">
+                            <a href="#" aria-label="facebook"><i class="ri-facebook-fill"></i></a>
+                            <a href="#" aria-label="twitter"><i class="ri-twitter-fill"></i></a>
+                            <a href="#" aria-label="Instagram"><i class="ri-instagram-line"></i></a>
+                    </div>
+                </div>
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
         
 </body>
 </html>
