--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="team-card blue-card">
                     <div class="blue-info">
                         <h3>Alice Johnson</h3>
-                        <h3>CEO & Founder</h3>
+                        <h4>CEO & Founder</h4>
                     </div>
                     <p>Alice has over of 15 years of experience in strategic leadership and business development</p>
                     <div class="blue-socials">
@@ -102,7 +102,23 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <img src=https://images.unsplash.com/photo-1735317147239-1cdc99bb9c1a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://images.unsplash.com/photo-1625241152315-4a698f74ceb7?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <div class="team-info">
+                        <h4>Carter Brovvnik</h4>
+                        <p>Marketing Specialist</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <img src="https://images.unsplash.com/photo-1607452241760-35b56fdfe0e4?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -118,7 +134,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <img src="https://images.unsplash.com/photo-1738511980236-c670a95a3970?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -126,7 +142,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <img src="https://images.unsplash.com/photo-1644268756788-a821c006fc5a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -134,23 +150,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
-                    <div class="team-info">
-                        <h4>Carter Brovvnik</h4>
-                        <p>Marketing Specialist</p>
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
-                    <div class="team-info">
-                        <h4>Carter Brovvnik</h4>
-                        <p>Marketing Specialist</p>
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <img src="https://cdn.prod.website-files.com/67a21f323bd0e156c6f48245/67b497214d8ad2e2f969a0a9_Frame%202147223608.webp" alt="">
+                    <img src="https://images.unsplash.com/photo-1624421998513-77a9ebb43d0d?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
