completed the card section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1625241152315-4a698f74ceb7?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1760497925596-a6462350c583?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=688" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
