completed the milestone section

--- a/index.html
+++ b/index.html
@@ -156,9 +156,66 @@
                         <p>Marketing Specialist</p>
                     </div>
                 </div>
-
             </div>
         </div>
-        
+        <div id="milestone-section">
+            <button>MILESTONE</button>
+            <div class="mile-container">
+                <div id="mi-coleft">
+                    <h2>Explore our comprehensive <br>service offerings</h2>
+                </div>
+                <div id="mi-coright">
+                    <p>Discover our significant milestones that have shaped our firm.<BR> Each achievement reflects our commitment to excellence and growth.</p>
+                </div>
+            </div>
+
+            <div class="mile-main">
+                <div class="mile-img">
+                    <img src="/img/mile-main.webp" >
+                </div>
+                <div class="timeline">
+                    <div class="timeline-item active">
+                        <div class="timeline-number">
+                            <i class="ri-lightbulb-line"></i>
+                        </div>
+                        <div class="timeline-text">
+                            <h5>2008</h5>
+                            <h2>Technology Solutions</h2>
+                            <p>Implemented cutting edge technology solutions that transformed operations.<br> Our first major project set the stage for future innovations.</p>
+                            <h4>Learn more<i class="ri-arrow-right-line"></i></h4>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-number">
+                            <i class="ri-lightbulb-line"></i>
+                        </div>
+                        <div class="timeline-text">
+                            <h5>2014</h5>
+                            <h4>Expanding New Horizons</h4>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-number">
+                            <i class="ri-lightbulb-line"></i>
+                        </div>
+                        <div class="timeline-text">
+                            <h5>2019</h5>
+                            <h4>Innovating For Excellence</h4>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-number">
+                            <i class="ri-lightbulb-line"></i>
+                        </div>
+                        <div class="timeline-text">
+                            <h5>2021</h5>
+                            <h4>Strengthening Partnerships</h4>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 </body>
 </html>
