completed the testomony section

--- a/index.html
+++ b/index.html
@@ -213,8 +213,32 @@
                             <h4>Strengthening Partnerships</h4>
                         </div>
                     </div>
-
                 </div>
+            </div>
+        </div>
+
+        <div class="testomonial-section">
+            <div class="t-secleft">
+                <div class="tsec-container">
+                    <div id="tsec-1">
+                        <img src="/img/testomonial logo.svg" alt="">
+                    </div>
+                    <div id="tsec-2">
+                        <i class="ri-star-fill"></i>
+                        <i class="ri-star-fill"></i>
+                        <i class="ri-star-fill"></i>
+                        <i class="ri-star-fill"></i>
+                        <i class="ri-star-fill"></i>
+                    </div>
+                </div>
+                <p>"They brought clarity to complex problems, breaking down barriers and delivering innovative solutions. I was truly impressed by how quickly their strategies turned into real, tangible outcomes, driving measurable growth and success for our business."</p>
+                <div class="test-author">
+                    <h3>John Doe</h3>
+                    <h3>CEO, Tech Innovations</h3>
+            </div>
+            </div>
+            <div class="t-secright">
+                <img src="/img/67b470ea57702d8f090cf4f6_Frame 2147223583 (1).webp" alt="">
             </div>
         </div>
 </body>
