--- a/index.html
+++ b/index.html
@@ -235,10 +235,37 @@
                 <div class="test-author">
                     <h3>John Doe</h3>
                     <h3>CEO, Tech Innovations</h3>
-            </div>
+                </div>
             </div>
             <div class="t-secright">
                 <img src="/img/67b470ea57702d8f090cf4f6_Frame 2147223583 (1).webp" alt="">
+            </div>
+        </div>
+
+        <div class="mapsection">
+            <div class="mapleft">
+                <div class="upperleft">
+                    <button>CONNECT</button>
+                    <h2>Get in touch</h2>
+                </div>
+                <div class="contactmap">
+                    <h3>Email:</h3>
+                    <h2>Consulting@gmail.com</h2>
+                    <h3>Phone:</h3>
+                    <h2>+1 (123) 456-7890</h2>
+                    <h3>Office:</h3>
+                    <h2>456 Business Ave, New York, NY 10001</h2>
+                    <h3>Follow us </h3>
+                    <div class="mapsocial">
+                       <a href="#" aria-label="facebook"><i class="ri-facebook-fill"></i></a>
+                        <a href="#" aria-label="LinkedIn"><i class="ri-linkedin-fill"></i ></a>
+                        <a href="#" aria-label="Twitter"><i class="ri-twitter-fill"></i></a>
+                        <a href="#" aria-label="YouTube"><i class="ri-youtube-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="mapright">
+                    <img src="/img/map_Graphic.webp" alt="map_Graphic">
             </div>
         </div>
 </body>
