completed the page

--- a/index.html
+++ b/index.html
@@ -268,5 +268,65 @@
                     <img src="/img/map_Graphic.webp" alt="map_Graphic">
             </div>
         </div>
+<!-- footer secction -->
+        <div class="footer">
+            <div class="footupper">
+                <div class="footleft">
+                    <div class="footlogo">
+                        <img src="/img/logo footer.png" alt="logo">
+                        <h1>Navis</h1>
+                    </div>
+                    <h2>Subscribe to our news later</h2>
+                    <div class="newsinput">
+                        <input type="text"placeholder="Enter your email">
+                        <button>Subscribe</button>
+                    </div>
+                </div>
+                <div class="footright">
+                    <div class="foot1">
+                        <h2>Quick Links</h2>
+                        <div class="footlinks">
+                            <a href="#t1">Home page</a>
+                            <a href="#services">our service</a>
+                            <a href="#t1">contact us</a>
+                            <a href="#t1">blog post</a>
+                            <a href="#t1">case study</a>
+                        </div>
+                    </div>
+                    <div class="foot1">
+                        <h2>contact with us </h2>
+                        <div class="footlinks">
+                            <a href="#t1">LinkedIn page</a>
+                            <a href="#services">Twitter Feed</a>
+                            <a href="#t1">Facebook Group</a>
+                            <a href="#t1">Instagram Profile</a>
+                            <a href="#t1">YouTube Channel</a>
+                        </div>
+                    </div>
+                    <div class="foot1">
+                        <h2>Developers</h2>
+                        <div class="footlinks">
+                            <a href="#t1">Salehstore.dev</a>
+                            <a href="#services">API documentation</a>
+                            <a href="#t1">Office Hours</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footbottom">
+                <h4>
+                    <i class="ri-global-line"></i> English(UK)
+                    <i class="ri-arrow-down-s-fill"></i>
+                </h4>
+                <p>© 2025 Navis. All Rights Reserved</p>
+                <div class="footsocial">
+                    <a href="#" aria-label="facebook"><i class="ri-facebook-fill"></i></a>
+                        <a href="#" aria-label="LinkedIn"><i class="ri-linkedin-fill"></i ></a>
+                        <a href="#" aria-label="Twitter"><i class="ri-twitter-fill"></i></a>
+                        <a href="#" aria-label="YouTube"><i class="ri-youtube-fill"></i></a>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
