completed the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
         <div id="t1">
             <div id="t1-head">
-                <img src="/img/logo.png">
+                <img src="img/logo.png">
                 <div class="t1-head-center">
                     <a href="#">Home</a>
                     <a href="#">service</a>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div id="ex-container2">
-                    <img src="/img/expertise-img.png" alt="expertimg">
+                    <img src="img/expertise-img.png" alt="expertimg">
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img src=https://images.unsplash.com/photo-1735317147239-1cdc99bb9c1a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1735317147239-1cdc99bb9c1a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1607452241760-35b56fdfe0e4?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"alt="">
+                    <img src="https://images.unsplash.com/photo-1607452241760-35b56fdfe0e4?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1644268756788-a821c006fc5a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"alt="">
+                    <img src="https://images.unsplash.com/photo-1644268756788-a821c006fc5a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                     <div class="team-info">
                         <h4>Carter Brovvnik</h4>
                         <p>Marketing Specialist</p>
@@ -171,7 +171,7 @@
 
             <div class="mile-main">
                 <div class="mile-img">
-                    <img src="/img/mile-main.webp" >
+                    <img src="img/mile-main.webp" >
                 </div>
                 <div class="timeline">
                     <div class="timeline-item active">
@@ -221,7 +221,7 @@
             <div class="t-secleft">
                 <div class="tsec-container">
                     <div id="tsec-1">
-                        <img src="/img/testomonial logo.svg" alt="">
+                        <img src="img/testomonial logo.svg" alt="">
                     </div>
                     <div id="tsec-2">
                         <i class="ri-star-fill"></i>
@@ -238,7 +238,7 @@
                 </div>
             </div>
             <div class="t-secright">
-                <img src="/img/67b470ea57702d8f090cf4f6_Frame 2147223583 (1).webp" alt="">
+                <img src="img/67b470ea57702d8f090cf4f6_Frame 2147223583 (1).webp" alt="">
             </div>
         </div>
 
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="mapright">
-                    <img src="/img/map_Graphic.webp" alt="map_Graphic">
+                    <img src="img/map_Graphic.webp" alt="map_Graphic">
             </div>
         </div>
 <!-- footer secction -->
@@ -273,7 +273,7 @@
             <div class="footupper">
                 <div class="footleft">
                     <div class="footlogo">
-                        <img src="/img/logo footer.png" alt="logo">
+                        <img src="img/logo footer.png" alt="logo">
                         <h1>Navis</h1>
                     </div>
                     <h2>Subscribe to our news later</h2>
